chore(cleanup): remove legacy structure, stabilize modules and auth-service